# snakemakeconfigs

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: config.toml  config_with_grids.toml  patch.toml  patch__grid.toml
examples/test/: config_000__model_layers=128-64-32__model_learning_rate=0p001.toml  config_005__model_layers=256-128-64__model_learning_rate=0p1.toml  config_006__model_layers=512-256-128__model_learning_rate=0p001.toml  config_008__model_layers=512-256-128__model_learning_rate=0p1.toml  config__model_layers=128-64-32__model_learning_rate=0p01.toml  config__model_layers=128-64-32__model_learning_rate=0p1.toml  config__model_layers=256-128-64__model_learning_rate=0p001.toml  config__model_layers=256-128-64__model_learning_rate=0p01.toml  config__model_layers=512-256-128__model_learning_rate=0p01.toml
src/snakemakeconfigs/: toml_patcher.py
src/snakemakeconfigs/cli/: configpatch.py
